Add introspective validation to inspectors

--- a/ui/controls/field-treeview.reel/field-treeview.html
+++ b/ui/controls/field-treeview.reel/field-treeview.html
@@ -52,6 +52,7 @@
                 "element": {"#": "treeview"}
             },
             "bindings": {
+                "disabled": {"<-": "@owner.disabled"},
                 "controller": {"<-": "@owner.controller"},
                 "isExpanded": {"<->": "@owner.isExpanded"},
                 "selectedPath": {"<->": "@owner.selectedPath"},
