--- a/ui/controls/timezone-picker.reel/timezone-picker.html
+++ b/ui/controls/timezone-picker.reel/timezone-picker.html
@@ -9,6 +9,9 @@
             "properties": {
                 "element": {"#": "owner"},
                 "imageElement": {"#": "timezone-image"}
+            },
+            "bindings": {
+                "classList.has('is-disabled')": {"<-": "@owner.disabled"}
             }
         }
     }
