--- a/ui/inspectors/calendar-task.reel/calendar-task.html
+++ b/ui/inspectors/calendar-task.reel/calendar-task.html
@@ -8,6 +8,7 @@
         "owner": {
             "properties": {
                 "element": {"#": "owner"},
+                "validationController": {"@": "validationController"},
                 "inspector": {"@": "inspector"}
             }
         },
@@ -18,10 +19,18 @@
                 "valuePropertyName": "value"
             }
         },
+        "validationController": {
+            "prototype": "core/controller/validation-controller",
+            "properties": {
+                "fields": {
+                }
+            }
+        },
         "inspector": {
             "prototype": "ui/inspectors/inspector.reel",
             "properties": {
                 "element": {"#": "inspector"},
+                "validationController": {"@": "validationController"},
                 "canDelete": true,
                 "canRevert": true,
                 "canSave": true,
