--- a/ui/inspectors/container.reel/container.html
+++ b/ui/inspectors/container.reel/container.html
@@ -6,7 +6,9 @@
     {
         "owner": {
             "properties": {
-                "element": {"#": "owner"}
+                "element": {"#": "owner"},
+                "validationController": {"@": "validationController"},
+                "inspector": {"@": "inspector"}
             }
         },
 
@@ -53,10 +55,18 @@
             }
         },
 
+        "validationController": {
+            "prototype": "core/controller/validation-controller",
+            "properties": {
+                "fields": {
+                }
+            }
+        },
         "inspector": {
             "prototype": "ui/inspectors/inspector.reel",
             "properties": {
                 "element": {"#": "inspector"},
+                "validationController": {"@": "validationController"},
                 "canSave": false,
                 "canRevert": false,
                 "canDelete": true,
