--- a/ui/inspectors/directory-services.reel/directory-service.reel/directory-service.html
+++ b/ui/inspectors/directory-services.reel/directory-service.reel/directory-service.html
@@ -6,7 +6,9 @@
     {
         "owner": {
             "properties": {
-                "element": {"#": "owner"}
+                "element": {"#": "owner"},
+                "validationController": {"@": "validationController"},
+                "inspector": {"@": "inspector"}
             }
         },
 
@@ -21,10 +23,18 @@
             }
         },
 
+        "validationController": {
+            "prototype": "core/controller/validation-controller",
+            "properties": {
+                "fields": {
+                }
+            }
+        },
         "inspector": {
             "prototype": "ui/inspectors/inspector.reel",
             "properties": {
                 "element": {"#": "inspector"},
+                "validationController": {"@": "validationController"},
                 "canRevert":    true,
                 "canSave":      true,
                 "controller":   {"@": "owner"}
