--- a/ui/inspectors/service.reel/webdav-service.reel/webdav-service.html
+++ b/ui/inspectors/service.reel/webdav-service.reel/webdav-service.html
@@ -82,8 +82,8 @@
             "prototype": "blue-shark/ui/field-password.reel",
             "properties": {
                 "element": {"#": "password"},
-                "passwordLabel1": "WebDAV Password",
-                "passwordLabel2": "Confirm WebDAV Password",
+                "label": "Password",
+                "label2": "Confirm password",
                 "errorMessage": "Passwords don't match"
             },
             "bindings": {
