--- a/ui/inspectors/share.reel/share.html
+++ b/ui/inspectors/share.reel/share.html
@@ -7,14 +7,15 @@
         "owner": {
             "properties": {
                 "element": {"#": "owner"},
+                "validationController": {"@": "validationController"},
+                "inspector": {"@": "inspector"},
                 "_shareTypePlaceHolder": {"@": "shareTypePlaceHolder"},
                 "treeControllers": {
                     "DATASET":      {"@": "datasetTreeController"},
                     "ZVOL":         {"@": "datasetTreeController"},
                     "DIRECTORY":    {"@": "directoryTreeController"},
                     "FILE":         {"@": "fileTreeController"}
-                },
-                "inspector": {"@": "inspector"}
+                }
             },
             "bindings": {
                 "volumePath": {"<-": "'/mnt/' + @owner.volume.id"}
@@ -47,10 +48,18 @@
                 "root": {"<-": "@owner.volumePath"}
             }
         },
+        "validationController": {
+            "prototype": "core/controller/validation-controller",
+            "properties": {
+                "fields": {
+                }
+            }
+        },
         "inspector": {
             "prototype": "ui/inspectors/inspector.reel",
             "properties": {
                 "element": {"#": "inspector"},
+                "validationController": {"@": "validationController"},
                 "canRevert":    true,
                 "canSave":      true,
                 "controller": {"@": "owner"}
