--- a/ui/inspectors/system-section.reel/mail.reel/mail.html
+++ b/ui/inspectors/system-section.reel/mail.reel/mail.html
@@ -83,7 +83,7 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "username"},
-                "label": "username"
+                "label": "Username"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.user"}
@@ -93,8 +93,8 @@
             "prototype": "blue-shark/ui/field-password.reel",
             "properties": {
                 "element": {"#": "password"},
-                "passwordLabel1": "Password",
-                "passwordLabel2": "Confirm Password",
+                "label": "Password",
+                "label2": "Confirm Password",
                 "errorMessage": "Passwords don't match"
             },
             "bindings": {
