--- a/ui/inspectors/system-section.reel/system-section.html
+++ b/ui/inspectors/system-section.reel/system-section.html
@@ -8,6 +8,8 @@
         "owner": {
             "properties": {
                 "element": {"#": "owner"},
+                "validationController": {"@": "validationController"},
+                "inspector": {"@": "inspector"},
                 "sectionComponent": {
                     "WebUI": {"@": "WebUI"},
                     "languageAndRegion": {"@": "languageAndRegion"},
@@ -20,12 +22,20 @@
                 }
             }
         },
+        "validationController": {
+            "prototype": "core/controller/validation-controller",
+            "properties": {
+                "fields": {
+                }
+            }
+        },
         "inspector": {
             "prototype": "ui/inspectors/inspector.reel",
             "properties": {
                 "element": {"#": "inspector"},
-                "canDelete": false,
-                "controller": {"@": "owner"}
+                "controller": {"@": "owner"},
+                "validationController": {"@": "validationController"},
+                "canDelete": false
             },
             "bindings": {
                 "context": {"<-": "@owner.context"},
