--- a/ui/inspectors/topology.reel/topology.html
+++ b/ui/inspectors/topology.reel/topology.html
@@ -7,7 +7,9 @@
     {
         "owner": {
             "properties": {
-                "element": {"#": "owner"}
+                "element": {"#": "owner"},
+                "validationController": {"@": "validationController"},
+                "inspector": {"@": "inspector"}
             },
             "bindings": {
                 "availableDisks": {"<-": "@availableDisks.availableDisks"},
@@ -15,10 +17,18 @@
                 "classList.has('is-detached')": {"<-": "!!@owner.object._isDetached"}
             }
         },
+        "validationController": {
+            "prototype": "core/controller/validation-controller",
+            "properties": {
+                "fields": {
+                }
+            }
+        },
         "inspector": {
             "prototype": "ui/inspectors/inspector.reel",
             "properties": {
                 "element": {"#": "inspector"},
+                "validationController": {"@": "validationController"},
                 "canDelete": true,
                 "canRevert": true,
                 "canSave": true,
