--- a/ui/inspectors/volume-dataset.reel/volume-dataset.html
+++ b/ui/inspectors/volume-dataset.reel/volume-dataset.html
@@ -8,22 +8,29 @@
         "owner": {
             "properties": {
                 "element": {"#": "owner"},
+                "validationController": {"@": "validationController"},
+                "inspector": {"@": "inspector"},
                 "treeController": {"@": "datasetTreeController"}
             },
             "bindings": {
                 "mode": {"<-": "@owner.object._isNew.defined() && @owner.object._isNew ? 'CREATE' : 'EDIT'"}
             }
         },
+        "validationController": {
+            "prototype": "core/controller/validation-controller",
+            "properties": {
+                "fields": {
+                }
+            }
+        },
         "inspector": {
             "prototype": "ui/inspectors/inspector.reel",
             "properties": {
                 "element": {"#": "inspector"},
-                "canRevert": "true",
-                "canSave": "true",
-                "keys": [
-                    "id"
-                ],
-                "controller": {"@": "owner"}
+                "controller": {"@": "owner"},
+                "validationController": {"@": "validationController"},
+                "canRevert": true,
+                "canSave": true
             },
             "bindings": {
                 "context": {"<-": "@owner.context"},
@@ -46,22 +53,20 @@
                 "switchValue": {"<-": "@owner.mode"}
             }
         },
-        "nameInput": {
+        "id": {
             "prototype": "blue-shark/ui/field-text-input.reel",
              "properties": {
                 "element": {"#": "nameInput"},
-                "validationPath": "id",
                 "label": "Name"
              },
              "bindings": {
                 "value": {"<->": "@owner.name"}
             }
         },
-        "pathSelector": {
+        "volume": {
             "prototype": "ui/controls/field-treeview.reel",
             "properties": {
                 "element": {"#": "pathSelector"},
-                "validationPath": "volume",
                 "controller": {"@": "datasetTreeController"},
                 "label": "Path"
             },
