--- a/ui/sections/peering/inspectors/ssh-credentials.reel/ssh-credentials.html
+++ b/ui/sections/peering/inspectors/ssh-credentials.reel/ssh-credentials.html
@@ -34,8 +34,8 @@
             "prototype": "blue-shark/ui/field-password.reel",
             "properties": {
                 "element": {"#": "password"},
-                "passwordLabel1": "Password",
-                "passwordLabel2": "Confirm"
+                "label": "Password",
+                "label2": "Confirm"
             },
             "bindings": {
                 "value": {"<->": "@owner.password"}
