--- a/ui/inspectors/snapshot.reel/snapshot.html
+++ b/ui/inspectors/snapshot.reel/snapshot.html
@@ -9,6 +9,7 @@
             "properties": {
                 "element": {"#": "owner"},
                 "datasetTreeController": {"@": "datasetTreeController"},
+                "validationController": {"@": "validationController"},
                 "inspector": {"@": "inspector"}
             },
             "bindings": {
@@ -31,13 +32,21 @@
                 "root": {"<-": "@owner.volume.id"}
             }
         },
+        "validationController": {
+            "prototype": "core/controller/validation-controller",
+            "properties": {
+                "fields": {
+                }
+            }
+        },
         "inspector": {
             "prototype": "ui/inspectors/inspector.reel",
             "properties": {
                 "element": {"#": "inspector"},
-                "canDelete": "true",
-                "canRevert": "true",
-                "canSave": "true",
+                "validationController": {"@": "validationController"},
+                "canDelete": true,
+                "canRevert": true,
+                "canSave": true,
                 "keys": [
                     "name",
                     "dataset"
