--- a/ui/inspectors/volume.reel/volume.html
+++ b/ui/inspectors/volume.reel/volume.html
@@ -8,6 +8,7 @@
         "owner": {
             "properties": {
                 "element": {"#": "owner"},
+                "validationController": {"@": "validationController"},
                 "inspector": {"@":"inspector"}
             },
             "bindings": {
@@ -40,11 +41,19 @@
                 "value": {"<-": "@owner.rootDataset.properties.available.parsed + @owner.rootDataset.properties.used.parsed"}
             }
         },
+        "validationController": {
+            "prototype": "core/controller/validation-controller",
+            "properties": {
+                "fields": {
+                }
+            }
+        },
         "inspector": {
             "prototype": "ui/inspectors/inspector.reel",
             "properties": {
                 "element": {"#": "inspector"},
-                "canDelete": "true",
+                "validationController": {"@": "validationController"},
+                "canDelete": true,
                 "controller": {"@": "owner"}
             },
             "bindings": {
