--- a/ui/controls/field-treeview.info/sample/ui/main.reel/main.html
+++ b/ui/controls/field-treeview.info/sample/ui/main.reel/main.html
@@ -14,7 +14,7 @@
             }
         },
         "icons": {
-            "prototype": "gui/ui/icons.reel",
+            "prototype": "blue-shark/ui/icons.reel",
             "properties": {
                 "element": {"#": "icons"}
             }
@@ -24,6 +24,8 @@
             "properties": {
                 "element": {"#": "default"},
                 "label": "test",
+                "disabled": false,
+                "readOnly": false,
                 "currentNode": {
                     "name": "parentNode",
                     "path": "/parentNode"
