--- a/ui/controls/traffic-light.reel/traffic-light.html
+++ b/ui/controls/traffic-light.reel/traffic-light.html
@@ -1,22 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
     <link rel="stylesheet" type="text/css" href="traffic-light.css">
     <script type="text/montage-serialization">
     {
         "owner": {
             "properties": {
                 "element": {"#": "owner"}
-            }
-        },
-        "legend": {
-            "prototype": "montage/ui/text.reel",
-            "properties": {
-                "element": {"#": "legend"}
             },
             "bindings": {
-                "value": {"<-": "@owner.text"}
+                "classList.has('hide')": {"<-": "!@owner.colorMapping"}
             }
         }
     }
@@ -25,7 +18,6 @@
 <body>
     <div data-montage-id="owner" class="TrafficLight">
         <div class="TrafficLight-light"></div>
-        <div data-montage-id="legend" class="TrafficLight-legend"></div>
         <div class="TrafficLight-after"></div>
     </div>
 </body>
